[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
#aoc-runner = "0.3.0"
#aoc-runner-derive = "0.3.0"
aoc-runner = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package="aoc-runner" }
aoc-runner-derive = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package="aoc-runner-derive" }
nom = "7"
num = "0.4"
itertools = "0.11"
rayon = "1"
pathfinding = "4"
nohash-hasher = "0.2"
rustc-hash = "1"
ahash = "0.8"
arrayvec = "0.7"
stable-pattern = "0.1"
once_cell = "1"
scanf = "1"
bit-set = "0.5.3"
bitvec = "1.0.1"

[profile.release]
lto = "thin"
panic = "abort"
